--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -1,3 +1,9 @@
+html {
+    font-size: 62.5%;
+    box-sizing: border-box;
+    height: 100%;
+}
+
 .cabeza {
     width: 20%;
     height: 10%;
@@ -10,17 +16,18 @@
 };
 
 body {
-    background-color: black;
-
+    background-color: #fc0233;
+        
     .nav {
         width: 20%;
+        min-height: 70%;
         height: 70%;
         
         .lista {
-            color: white;
+            color: black;
             font-size: 20px;
             font-family: 'Times New Roman', Times, serif;
-
+            list-style: none;
             li {
                 margin: 3px;
             };
