--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -4,27 +4,13 @@ html {
     font-size: 62.5%;
     box-sizing: border-box;
     height: 100%;
-}
+};
 
 body { 
     margin: 0px auto;
     width: 100%;
     height: 100%;
-    background-color: rgb(80,79,76);
+    background-color: v.$fondo;
     font-family: v.$fuente_principal;
     overflow-y: hidden;
 };
-
-footer {
-    width: 10%;
-    height: 5%; 
-    
-    ul {
-        color: hsla(0,0%,100%,.2);;
-        font-size: 10px;
-
-        li {
-            margin: 2px;
-        }
-    }
-}
