--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,5 +1,5 @@
 // Fuentes
-$fuente_principal: 'Times New Roman', Times, serif;
+$fuente_principal: 'Oswald', sans-serif;
 
 // Tamaño de Media Queries
 $telefono: 480px;
@@ -7,9 +7,9 @@ $tablet: 768px;
 $desktop: 1024px;
 
 // Colores
-$principal: rgb(3, 99, 16);
+$principal: rgb(68, 141, 181);
 $secundario: #cb0000;
-$fondo:#0b2400;
+$fondo:#527779;
 
 $negro: #181818;
 $blanco: #FFFFFF;
