--- a/src/scss/layout/_navegacion.scss
+++ b/src/scss/layout/_navegacion.scss
@@ -5,12 +5,14 @@
     width: 30rem;
     height: 100%;
     padding-top: 1rem;
+    box-shadow: 7px 0px 15px 1px rgba(0,0,0,0.75);
     
     .titulo {
         text-align: center;
         color: v.$principal;
         font-size: 3.5rem;
         margin-bottom: 0;
+        font-family: v.$fuente_principal;
     };
     
     .contenedor-superior {
@@ -29,7 +31,7 @@
             padding: 2rem 0;
         };
     };
-
+    
     .contenedor-inferior {
         display: flex;
         justify-content: center;
