--- a/src/scss/layout/_tablero.scss
+++ b/src/scss/layout/_tablero.scss
@@ -1,11 +1,15 @@
 @use 'base/variables' as v;
 
 .negro {
+    display: grid;
+    place-items: center;
     background-color: v.$principal;
     border: 1px solid black;
 }
 
 .blanco {
+    display: grid;
+    place-items: center;
     background-color: v.$blanco;
     border: 1px solid black;
 }
@@ -18,3 +22,4 @@
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
+
