--- a/src/scss/layout/_piezas.scss
+++ b/src/scss/layout/_piezas.scss
@@ -1,9 +1,21 @@
 @use 'base/variables' as v;
 
 .piezas {
-    width: 3rem;
+    width: 5rem;
+    border-radius: 50%;
     margin: 0px auto;
-    height: 3rem;
-    background-color: v.$negro;
+    height: 5rem;
+
 };
 
+.white {
+
+    background-color: v.$gris;
+
+};
+
+.black {
+
+    background-color: v.$negro;
+
+}
